--- a/templates/home.html
+++ b/templates/home.html
@@ -1,57 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Careers  </title>
+    <title>Careers</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
-      h1 {
-        font-size: 40px;
-        font-family: Roboto;
-        font: weight: normal;
-        color: rgb(100, 100, 100);
-        text-align: center; 
-        
-      }
       #banner {
-        width: 100%;
-        height: 360%; 
-        object-fit: cover;
-      }
-      h2 {
-        font-family: Roboto;
-        font-size: 32px;
-        color: rgb(100)100, 100);
-        text-align: center;
-        font-weight: normal; 
-        
-      }
-      .bodytext {
-        font-family: Roboto;
-        color: rgb(80, 80, 80);
-      }
-
-      #container {
-        mac-width: 720px;
-        margin: 0 auto 0 auto;
       }
     </style>
   </head>
   <body>
-    <div id="container">
-      <h1> Remote Cybersecurity Careers</h1>
+    <div class="container">
+      <h1 class="text-center mt-2 mb-4">
+        {{company_name}} Job Posting
+      </h1>
       <img id="banner" src="https://c3f885b8-02d3-4b26-85fc-97bba4c16c96-00-u2p45xryfpgi.riker.replit.dev/static/Careersimg.jpg"
         height="320">
-      <h2> About Cybersecurity Remote Careers</h2>
-      <p class="bodytext">
+      <h2 class="text-center"> About Cybersecurity Remote Careers</h2>
+      <p class="lead">
         So perhaps, you've generated some fancy text, and you're content that you can now copy and paste your fancy text in the comments section of funny cat videos, but perhaps you're wondering how it's even possible to change the font of your text? Is it some sort of hack? Are you copying and pasting an actual font?
       </p>
-      <h2>Job Openings</h2>
-      <p class="bodytext" To Do</p>
-      <div style="text-align:center;">
-      <button>Contact Us</button>
-        <p>Copyright 2022,</p>
+      <h2 class="text-center mt-2 mb-4">Job Openings</h2>
+      <p>
+        {% for job in jobs %}
+          {% include 'jobitem.html' %}
+        {% endfor %}
+      </p>
+      <div class="text-center">
+      <button class="btn btn-primary btn-lg">Contact Us</button>
+        <p class="mt-4">Copyright 2022,</p>
       </div>
     </div>
-    
-  </body>
-  
+  </body> 
 </html>
