--- a/templates/home.html
+++ b/templates/home.html
@@ -15,8 +15,8 @@
       <h1 class="text-center mt-2 mb-4">
         {{company_name}} Job Posting
       </h1>
-      <img id="banner" src="https://c3f885b8-02d3-4b26-85fc-97bba4c16c96-00-u2p45xryfpgi.riker.replit.dev/static/Careersimg.jpg"
-        height="320">
+      <img class="center" id="banner" src="https://c3f885b8-02d3-4b26-85fc-97bba4c16c96-00-u2p45xryfpgi.riker.replit.dev/static/Careersimg.jpg"
+        height="360" width="1000">
       <h2 class="text-center"> About Cybersecurity Remote Careers</h2>
       <p class="lead">
         So perhaps, you've generated some fancy text, and you're content that you can now copy and paste your fancy text in the comments section of funny cat videos, but perhaps you're wondering how it's even possible to change the font of your text? Is it some sort of hack? Are you copying and pasting an actual font?
