--- a/templates/home.html
+++ b/templates/home.html
@@ -1,23 +1,50 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Careers</title>
+    <title>Go Remote Cyber</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
+      h1 {
+        font-size: 40px;
+        font-family: Roboto; 
+        font-weight: normal;
+        color: rgb(50, 50, 50)
+        text-align: center;
+      }
       #banner {
+        width: 100%; 
+        height: 360;
+        object-fit: cover;
+      }
+      h2 {
+        font-family: Roboto;
+        font-size: 32px;
+        color: rgb(100, 100, 100)
+        text-align: center;
+        font-weight: normal;
+      }
+      p {
+        font-family: Roboto;
+        color: rgb(80, 80, 80);
+        
+      }
+      #container {
+        max-width: 720px;
+        margin: 0, auto, 0 auto;
+        
       }
     </style>
   </head>
   <body>
+    {% include 'nav.html' %}
     <div class="container">
       <h1 class="text-center mt-2 mb-4">
-        {{company_name}} Job Posting
+        {{company_name}} Remote Job Posting
       </h1>
-      <img class="center" id="banner" src="https://c3f885b8-02d3-4b26-85fc-97bba4c16c96-00-u2p45xryfpgi.riker.replit.dev/static/Careersimg.jpg"
-        height="360" width="1000">
-      <h2 class="text-center"> About Cybersecurity Remote Careers</h2>
+      <img id="banner" src="https://c3f885b8-02d3-4b26-85fc-97bba4c16c96-00-u2p45xryfpgi.riker.replit.dev/static/Careersimg.jpg">
+      <h2 class="text-center"> About (G)o (R)emote (C)ybersecurity</h2>
       <p class="lead">
         So perhaps, you've generated some fancy text, and you're content that you can now copy and paste your fancy text in the comments section of funny cat videos, but perhaps you're wondering how it's even possible to change the font of your text? Is it some sort of hack? Are you copying and pasting an actual font?
       </p>
@@ -28,9 +55,9 @@
         {% endfor %}
       </p>
       <div class="text-center">
-      <button class="btn btn-primary btn-lg">Contact Us</button>
-        <p class="mt-4">Copyright 2022,</p>
+      <a href="mailto:hello@goremotecybersecurity?subject=RemoteCarrersfor" class="btn btn-primary btn-lg">Contact Us</a>
       </div>
     </div>
+    {% include 'footer.html' %}
   </body> 
 </html>
