--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -13,7 +13,7 @@
     </div>
     {% endif %}
   </div>
-  <div class="col-3">
-    <button type="button" class="btn btn-outline-primary">Apply</button>
+  <div class="col-2 padding-right:16px">
+    <a href="mailto:hell@me.ai?subject=Application for {{job['title']}} type="button" class="btn btn-outline-primary">Apply</a>
   </div>
 </div>
