Drop down on RemoteJobs tab

--- a/templates/home.html
+++ b/templates/home.html
@@ -46,9 +46,8 @@
       <img id="banner" src="https://c3f885b8-02d3-4b26-85fc-97bba4c16c96-00-u2p45xryfpgi.riker.replit.dev/static/Careersimg.jpg">
       <h2 class="text-center"> About (G)o (R)emote (C)ybersecurity</h2>
       <p class="lead">
-        So perhaps, you've generated some fancy text, and you're content that you can now copy and paste your fancy text in the comments section of funny cat videos, but perhaps you're wondering how it's even possible to change the font of your text? Is it some sort of hack? Are you copying and pasting an actual font?
-      </p>
-      <h2 class="text-center mt-2 mb-4">Job Openings</h2>
+This site is still under construction and will provide live data soon. Thank you for stopping by      </p>
+      <h2 class="text-center mt-2 mb-4">Job Openings (Dummy Data)</h2>
       <p>
         {% for job in jobs %}
           {% include 'jobitem.html' %}
