--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,7 +2,7 @@
   <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
       <li class="nav-item"><a href="https://goremotecybersecurity" class="nav-link px-2 text-body-secondary">Home</a></li>
-      <li class="nav-item"><a href="https://goremotecybersecurity/RoadMap" class="nav-link px-2 text-body-secondary">RoadMap</a></li>
+      <li class="nav-item"><a href="https://www.goremotecybersecurity/RoadMap" class="nav-link px-2 text-body-secondary">RoadMap</a></li>
       <li class="nav-item"><a href="https://goremotecybersecurity/JobLandscape" class="nav-link px-2 text-body-secondary">Job Landscape</a></li>
       <li class="nav-item"><a href="https://goremotecybersecurity/BestCertification" class="nav-link px-2 text-body-secondary">Best Certifications</a></li>
       <li class="nav-item"><a href="https://goremotecybersecurity/About" class="nav-link px-2 text-body-secondary">About</a></li>
