--- a/templates/footer.html
+++ b/templates/footer.html
@@ -7,7 +7,7 @@
       <li class="nav-item"><a href="https://goremotecybersecurity/BestCertification" class="nav-link px-2 text-body-secondary">Best Certifications</a></li>
       <li class="nav-item"><a href="https://goremotecybersecurity/About" class="nav-link px-2 text-body-secondary">About</a></li>
     </ul>
-    <p class="text-center text-body-secondary">&copy; 2024 Company, Inc</p>
+    <p class="text-center text-body-secondary">&copy; 2024 GoRemoteCybersecurity, Inc</p>
   </footer>
 </div>
 
