--- a/templates/roadmap.html
+++ b/templates/roadmap.html
@@ -43,7 +43,7 @@
       <h1 class="text-center mt-2 mb-4">
         {{company_name}} Quick Start Guide
       </h1>
-      <img id="banner" src="https://c3f885b8-02d3-4b26-85fc-97bba4c16c96-00-u2p45xryfpgi.riker.replit.dev/static/RemoteCyber.jpg">
+        <img id="banner" src="{{ url_for('static', filename='images/RemoteCyber.jpg') }}" alt="Description of the image">
       <h2 class="text-center"> Sample</h2>
       <p class="lead">
         <p class="text-center mt-2 mb-4">The shift towards remote work has opened up countless opportunities for cybersecurity professionals. However, landing a remote position, especially as a less seasoned professional, can be challenging. Here’s a guide to help you become a strong candidate for remote cybersecurity roles, covering essential skills, resume and LinkedIn updates, and other actionable steps.</p>
