Updated image file

--- a/templates/home.html
+++ b/templates/home.html
@@ -41,7 +41,7 @@
       <h1 class="text-center mt-2 mb-4">
         {{ company_name }} Remote Job Posting
       </h1>
-      <img id="banner" src="{{ url_for('static', filename='images/RemoteCyber.jpg') }}" alt="Description of the image">
+      <img id="banner" src="{{ url_for('static', filename='images/RemoteCyber.jpg') }}" alt="Remote Cyber Image">
       <h2 class="text-center"> About (G)o (R)emote (C)ybersecurity</h2>
       <p class="lead">
         This site is still under construction and will provide live data soon. Thank you for stopping by.
