--- a/templates/joblandscape.html
+++ b/templates/joblandscape.html
@@ -41,7 +41,7 @@
       <h1 class="text-center mt-2 mb-4">
         {{ company_name }} Remote Job Posting
       </h1>
-      <img id="banner" src="{{ url_for('static', filename='images/Careersimg.jpg') }}" alt="Description of the image">
+      <img id="banner" src="{{ url_for('static', filename='images/Careersimg.jpg') }}" alt="Careers Image">
       <h2 class="text-center"> About (G)o (R)emote (C)ybersecurity</h2>
      {% include 'footer.html' %}
   </body> 
