Updated param for remote roles

--- a/templates/home.html
+++ b/templates/home.html
@@ -42,12 +42,12 @@
         {{ company_name }} Remote Job Posting
       </h1>
       <img id="banner" src="{{ url_for('static', filename='images/RemoteCyber.jpg') }}" alt="Remote Cyber Image">
-      <h2 class="text-center"> About (G)o (R)emote (C)ybersecurity</h2>
+      <h2 class="text-center"> About (G)o (R)emote (C)ybersecurity - Dummy Data Below</h2>
       <p class="lead">
         This site is still under construction and will provide live data soon. Thank you for stopping by.
       </p>
-      <h2 class="text-center mt-2 mb-4"> (Dummy Data)</h2>
-      <div>
+      <h2 class="text-center mt-2 mb-4"> <!--#Update later --></h2>
+      <!-- <div>
         <div class="job-item mb-4">
           <h3>Data Analyst</h3>
           <p><strong>Organization:</strong> ABC Corp</p>
@@ -70,6 +70,7 @@
           <a href="#" class="btn btn-primary">Apply Now</a>
         </div>
       </div>
+      -->
         <h2 class="text-center mt-2 mb-4">Open Remote Cybersecurity Roles</h2>
         <div>
           {% for job in jobs %}
